diesel_compile_tests/tests/fail/derive/bad_sqlite_type.stderr
error: unexpected end of input, expected parentheses
       help: The correct format looks like `#[diesel(sqlite_type(name = "foo"))]`
 --> tests/fail/derive/bad_sqlite_type.rs:6:21
  |
6 | #[diesel(sqlite_type)]
  |                     ^

error: expected attribute `name`
       help: The correct format looks like #[diesel(sqlite_type(name = "foo"))]
  --> tests/fail/derive/bad_sqlite_type.rs:10:22
   |
10 | #[diesel(sqlite_type())]
   |                      ^

error: expected parentheses
  --> tests/fail/derive/bad_sqlite_type.rs:14:22
   |
14 | #[diesel(sqlite_type = "foo")]
   |                      ^

error: unexpected end of input, expected `=`
       help: The correct format looks like `#[diesel(sqlite_type(name = "foo"))]`
  --> tests/fail/derive/bad_sqlite_type.rs:18:26
   |
18 | #[diesel(sqlite_type(name))]
   |                          ^

error: expected `=`
  --> tests/fail/derive/bad_sqlite_type.rs:22:26
   |
22 | #[diesel(sqlite_type(name()))]
   |                          ^

error: expected string literal
  --> tests/fail/derive/bad_sqlite_type.rs:26:29
   |
26 | #[diesel(sqlite_type(name = Foo))]
   |                             ^^^

error: unknown attribute, expected `name`
  --> tests/fail/derive/bad_sqlite_type.rs:30:22
   |
30 | #[diesel(sqlite_type(what))]
   |                      ^^^^
